Fixed project site to work on mobile

--- a/projects/projects_style.css
+++ b/projects/projects_style.css
@@ -97,9 +97,9 @@ p {
 }
 
 .footerItem {
-  display: inline-block;
+  display: inline;
   margin-left: 20px;
-  width: 250px;
+  max-width: 250px;
   font-size: 24px;
   margin-right: 20px;
   text-align: center;
