--- a/projects/tochrc/tochrc_style.css
+++ b/projects/tochrc/tochrc_style.css
@@ -17,3 +17,8 @@
 .projectTitle {
   font-variant: small-caps;
 }
+
+iframe {
+  width: 100%;
+  height: 100%;
+}
